--- a/public/css/sprites/monsters.css
+++ b/public/css/sprites/monsters.css
@@ -3,7 +3,7 @@
     width: 32px;
     height: 32px;
     background-image: url('../../assets/monsters.png');
-    background-size: 1024px 1568px;
+    background-size: 1024px 1600px;
     background-repeat: no-repeat;
 }
 /* --- aberrations --- */
