--- a/public/css/sprites/tiles.css
+++ b/public/css/sprites/tiles.css
@@ -3,7 +3,7 @@
     width: 32px;
     height: 32px;
     background-image: url('../../assets/tiles.png');
-    background-size: 1024px 2240px;
+    background-size: 1024px 2272px;
     background-repeat: no-repeat;
 }
 /* --- altars --- */
